--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>GaukeT</title>
+<link rel="icon" href="fav/curly_brackets.png">
 <style>
 body, html {
   height: 100%;
