--- a/index.html
+++ b/index.html
@@ -1,60 +1,27 @@
 <!DOCTYPE html>
 <html>
-<title>GaukeT</title>
-<link rel="icon" href="fav/curly_brackets.png">
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
+  <head>
+    <title>GaukeT</title>
+    <link rel="icon" href="fav/curly_brackets.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+  </head>
 
-.bgimg {
-  background-image: url('https://www.w3schools.com/w3images/forestbridge.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
-}
+  <body>
+    <div class="bgimg">
+      <div class="topleft">
+        <p>GaukeT</p>
+      </div>
 
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
+      <div>
+        <i class="fas fa-bars"></i>
+      </div>
 
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
 
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-</style>
-<body>
-
-<div class="bgimg">
-  <div class="topleft">
-    <p>GaukeT</p>
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-  </div>
-</div>
-
-</body>
+      <div class="middle">
+        <h1>COMING SOON</h1>
+        <hr>
+      </div>
+    </div>
+  </body>
 </html>
