home page - TODO: links to blogs and about

--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>GaukeT</title>
     <link rel="icon" href="fav/curly_brackets.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="text/html; charset=utf-8" />
+  </head>
   <body>
     <div class="bgimg">
       <div class="topleft">
         <p>GaukeT</p>
       </div>
 
-      <div>
-        <i class="fas fa-bars"></i>
+      <div class="topright">
+        <a href="#"><p>Blogs</p></a>
+        <a href="#"><p>About</p></a>
       </div>
 
-
-      <div class="middle">
-        <h1>COMING SOON</h1>
+      <div class="left">
+        <h1>Gauke Teijema</h1>
         <hr>
+        <p>Software developer</p>
+      </div>
+
+      <div class="bottomright">
+        <a href="https://github.com/GaukeT" target="_blank" title="GitHub">
+          <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
       </div>
     </div>
   </body>
