home page ADDED:  - responsive menu TODO:  - links to blogs and about

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       </div>
 
       <div class="topright">
-        <a href="#"><p>Blogs</p></a>
-        <a href="#"><p>About</p></a>
+        <a href="#">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
+        <a class="wide" href="#"><p>Blogs</p></a>
+        <a class="wide" href="#"><p>About</p></a>
       </div>
 
       <div class="left">
