--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <p>Software developer</p>
       </div>
 
+      <div class="bottomleft">
+        <img alt="Under construction" src="img/construction.png">
+        <p>Disclaimer: site may work differently than expected. New functionality will be added soon.</p>
+      </div>
+      
       <div class="bottomright">
         <a href="https://github.com/GaukeT" target="_blank" title="GitHub">
           <i class="fa fa-github" aria-hidden="true"></i>
