home page ADDED:  - menu dropdown small window TODO:  - links to blogs and about

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
       </div>
 
       <div class="topright">
-        <a href="#">
-          <i class="fa fa-bars" aria-hidden="true"></i>
-        </a>
-        <a class="wide" href="#"><p>Blogs</p></a>
-        <a class="wide" href="#"><p>About</p></a>
+        <div class="small">
+          <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+          <div class="menu-items">
+            <a href="#"><p>Blogs</p></a>
+            <a href="#"><p>About</p></a>
+          </div>
+        </div>
+
+        <div class="wide">
+          <a href="#"><p>Blogs</p></a>
+          <a href="#"><p>About</p></a>
+        </div>
       </div>
 
       <div class="left">
