home page ADDED:  - rearrange code to header and footer tags TODO:  - links to blogs and about

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bgimg">
   <head>
     <title>GaukeT</title>
     <link rel="icon" href="fav/curly_brackets.png">
@@ -9,46 +9,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html; charset=utf-8" />
   </head>
-  <body>
-    <div class="bgimg">
-      <div class="topleft">
-        <p>GaukeT</p>
-      </div>
+  <header>
+    <div class="topleft">
+      <p>GaukeT</p>
+    </div>
 
-      <div class="topright">
-        <div class="small">
-          <span><i class="fa fa-bars" aria-hidden="true"></i></span>
-          <div class="menu-items">
-            <a href="#"><p>Blogs</p></a>
-            <a href="#"><p>About</p></a>
-          </div>
-        </div>
-
-        <div class="wide">
+    <div class="topright">
+      <div class="small">
+        <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+        <div class="menu-items">
           <a href="#"><p>Blogs</p></a>
           <a href="#"><p>About</p></a>
         </div>
       </div>
 
+      <div class="wide">
+        <a href="#"><p>Blogs</p></a>
+        <a href="#"><p>About</p></a>
+      </div>
+    </div>
+  </header>
+  <body>
+    <div>
       <div class="left">
         <h1>Gauke Teijema</h1>
         <hr>
         <p>Software developer</p>
       </div>
-
-      <div class="bottomleft">
-        <img alt="Under construction" src="img/construction.png">
-        <p>Disclaimer: site may work differently than expected. New functionality will be added soon.</p>
-      </div>
-      
-      <div class="bottomright">
-        <a href="https://github.com/GaukeT" target="_blank" title="GitHub">
-          <i class="fa fa-github" aria-hidden="true"></i>
-        </a>
-        <a href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-      </div>
     </div>
   </body>
+  <footer>
+    <div class="bottomleft">
+      <img alt="Under construction" src="img/construction.png">
+      <p>Disclaimer: site may work differently than expected. New functionality will be added soon.</p>
+    </div>
+
+    <div class="bottomright">
+      <a href="https://github.com/GaukeT" target="_blank" title="GitHub">
+        <i class="fa fa-github" aria-hidden="true"></i>
+      </a>
+      <a href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+    </div>
+  </footer>
 </html>
