home page ADDED:  - dynamic loading pages into body/div TODO:  - links to blogs and about

--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html; charset=utf-8" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
   </head>
   <header>
     <div class="topleft">
-      <p>GaukeT</p>
+      <a href=""><p>GaukeT</p></a>
     </div>
-
     <div class="topright">
       <div class="small">
         <span><i class="fa fa-bars" aria-hidden="true"></i></span>
         <div class="menu-items">
-          <a href="#"><p>Blogs</p></a>
-          <a href="#"><p>About</p></a>
+          <a href="pages/blogs.html"><p>Blogs</p></a>
+          <a href="pages/about.html"><p>About</p></a>
         </div>
       </div>
 
       <div class="wide">
-        <a href="#"><p>Blogs</p></a>
-        <a href="#"><p>About</p></a>
+        <a href="pages/blogs.html"><p>Blogs</p></a>
+        <a href="pages/about.html"><p>About</p></a>
       </div>
     </div>
   </header>
   <body>
-    <div>
+    <div id="content">
       <div class="left">
         <h1>Gauke Teijema</h1>
         <hr>
