--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href=""><p>GaukeT</p></a>
     </div>
     <div class="topright">
-      <div class="small"><hr>
+      <div class="small">
         <span><i class="fa fa-bars" aria-hidden="true"></i></span>
         <div class="menu-items">
           <a href="pages/blogs.html"><p>Blogs</p></a>
