--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <header>
     <div class="topleft">
-      <a href=""><p>GaukeT</p></a>
+      <a href="pages/home.html"><p>GaukeT</p></a>
     </div>
     <div class="topright">
       <div class="small">
