add contact form

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <a rel="noopener" href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
+      <a href="pages/contact.html" title="Mail">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      </a>
     </div>
   </footer>
 </html>
