--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a rel="noopener" href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
-      <a href="pages/contact.html" title="Mail">
+      <a href="mailto:gauket.dev@gmail.com?subject=github.io"> title="Mail">
         <i class="fa fa-envelope" aria-hidden="true"></i>
       </a>
     </div>
