--- a/index.html
+++ b/index.html
@@ -6,63 +6,40 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <meta name="description" content="GaukeT | Blogs, About and more">
+    <meta name="description" content="GaukeT | About me">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html; charset=utf-8" />
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
   </head>
-  <header>
-    <div class="topleft">
-      <a href="pages/home.html"><p>GaukeT</p></a>
+  <body class="container">
+    <div class="container navbar">
+      <div>
+        <a href="#"><span>GaukeT</span></a>
+      </div>
+      <div class="container navbar-item">
+        <a href="#" class="hamburger"><span><i class="fa fa-bars"></i></span></a>
+        <a href="#"><span>Projects</span></a>
+        <a href="#"><span>Blogs</span></a>
+        <a href="#"><span>About</span></a>
+      </div>
     </div>
-    <div class="topright">
-      <div class="small">
-        <span><i class="fa fa-bars" aria-hidden="true"></i></span>
-        <div class="menu-items">
-          <a href="pages/blogs.html"><p>Blogs</p></a>
-          <a href="pages/about.html"><p>About</p></a>
+    <div class="container content">
+        <div>
+          <h1>Gauke Teijema</h1>
+          <hr>
+          <p>Software developer</p>
         </div>
-      </div>
-
-      <div class="wide">
-        <a href="pages/blogs.html"><p>Blogs</p></a>
-        <a href="pages/about.html"><p>About</p></a>
-      </div>
+        <div></div><div></div>
     </div>
-  </header>
-  <body>
-    <div id="preloader"></div>
-
-    <div id="content">
-      <div class="left">
-        <h1>Gauke Teijema</h1>
-        <hr>
-        <p>Software developer</p>
-      </div>
-	  
-    </div>
-    
-    <script>
-      var loader = document.getElementById('preloader');
-      window.addEventListener('load', function() {
-        loader.style.display = 'none';
-      });
-    </script>
-  </body>
-  <footer>
-  <div class="bottomright">
+    <div class="container footer">
       <a rel="noopener" href="https://github.com/GaukeT" target="_blank" title="GitHub">
         <i class="fa fa-github" aria-hidden="true"></i>
       </a>
       <a rel="noopener" href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
-  
       <a rel="noopener" href="mailto://gauket.dev@gmail.com?subject=github-pages" target="_top"  title="Mail">
         <i class="fa fa-envelope"></i>
       </a>
     </div>
-  </footer>
+  </body>
 </html>
