--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="bgimg">
+<html lang="en">
   <head>
     <title>GaukeT</title>
-    <link rel="icon" href="fav/curly_brackets.png">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <meta name="description" content="GaukeT | About me">
+    <meta name="description" content="GaukeT | Home">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html; charset=utf-8" />
   </head>
@@ -17,9 +17,9 @@
       </div>
       <div class="container navbar-item">
         <a href="#" class="hamburger"><span><i class="fa fa-bars"></i></span></a>
-        <a href="#"><span>Projects</span></a>
-        <a href="#"><span>Blogs</span></a>
-        <a href="#"><span>About</span></a>
+        <a href="/t/projects"><span>Projects</span></a>
+        <a href="/t/blogs"><span>Blogs</span></a>
+        <a href="/t/about"><span>About</span></a>
       </div>
     </div>
     <div class="container content">
@@ -37,7 +37,7 @@
       <a rel="noopener" href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
-      <a rel="noopener" href="mailto://gauket.dev@gmail.com?subject=github-pages" target="_top"  title="Mail">
+      <a rel="noopener" href="mailto:gauket.dev@gmail.com?subject=contact" target="_top" title="Mail">
         <i class="fa fa-envelope"></i>
       </a>
     </div>
