--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="GaukeT | Gauke Teijema | Software Developer | Portfolio | Showcase | Personal website">
+    <meta name="theme-color" content="#1A4341"/>
     <title>GaukeT</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
