add new feature

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <script src='script.js'></script>
   </head>
   <body>
+    <div id="blob"></div>
+    <div id="blur"></div>
+
     <h1 id="h1" data-value="GAUKE TEIJEMA">GAUKE TEIJEMA</h1>
     <!-- <p id="p1" data-value="Software Developer">Software Developer</p> -->
 
-    <div>
+    <div class="links">
       <a rel="noopener" href="https://github.com/GaukeT" target="_blank" title="GitHub">
         <i class="fa fa-github" aria-hidden="true"></i>
       </a>
