--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="home">
             <h1 id="h1" data-value="GAUKE TEIJEMA">GAUKE TEIJEMA</h1>
-            <p class="tagline">Transforming Ideas into High-Quality Code</p>
+            <p class="tagline">Explore | Connect | Create</p>
         </section>
 
         <section id="about">
@@ -37,7 +37,7 @@
             <p>My journey into software development began in August 2016. Initially, I worked in finance, but my interest in technology was sparked when I started thinking about automating tasks and improving the systems I worked with. The excitement and energy I felt while working on these improvements made me realize that software development was my true calling. This epiphany set me on the path to becoming a software developer, a decision that has been incredibly fulfilling.</p>
             <p>I take great pride in writing clean, readable code that stands the test of time. I believe in simplicity and strive to avoid overcomplicating problems, ensuring that both my colleagues and I can easily understand and maintain the codebase in the future. My motivation comes from the tangible value my work creates, making life easier for others through the software I develop.</p>
             <p>Outside of my professional life, I have a variety of interests that keep me balanced and inspired. I enjoy running, playing the guitar, and working in my garden, where I grow vegetables and care for my indoor plants. Recently, I've also taken up boxing classes, which have been a fantastic new challenge.</p>
-            <p>Thank you for visiting my site. Feel free to explore my portfolio and blog, where I share insights and updates on my projects and interests. I'm always eager to connect with like-minded individuals and explore new opportunities. Let's connect and create something amazing together!</p>
+            <p>Thank you for visiting my site. Feel free to explore my portfolio, where I share insights and updates on my projects and interests. I'm always eager to connect with like-minded individuals and explore new opportunities. Let's connect and create something amazing together!</p>
         </section>
 
         <section id="projects">
