--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul class="nav-menu" id="navMenu" role="menu">
                     <li><a href="#home" aria-label="Home">Home</a></li>
                     <li><a href="#about" aria-label="About">About</a></li>
-                    <li><a href="#projects" aria-label="Projects">Projects</a></li>
+                    <!--li><a href="#projects" aria-label="Projects">Projects</a></li-->
                     <li><a href="#contact" aria-label="Contact">Contact</a></li>
                 </ul>
             </div>
@@ -36,11 +36,11 @@
             <p>Welcome to my personal website! I'm Gauke Teijema, a passionate software developer with a diverse professional background and a deep commitment to creating high-quality, efficient code.</p>
             <p>My journey into software development began in August 2016. Initially, I worked in finance, but my interest in technology was sparked when I started thinking about automating tasks and improving the systems I worked with. The excitement and energy I felt while working on these improvements made me realize that software development was my true calling. This set me on the path to becoming a software developer, a decision that has been incredibly fulfilling.</p>
             <p>I take great pride in writing clean, readable code that stands the test of time. I believe in simplicity and strive to avoid overcomplicating problems, ensuring that both my colleagues and I can easily understand and maintain the codebase in the future. My motivation comes from the tangible value my work creates, making life easier for others through the software I develop.</p>
-            <p>Outside of my professional life, I have a variety of interests that keep me balanced and inspired. I enjoy running, playing the guitar, working in my garden where I grow vegetables and taking care for my indoor plants. Additionally, I love playing board games, card games and PC games. These personal interests sometimes intersects with my profession, as you will find out in the projects section. Recently, I've also taken up boxing classes, which have been a fantastic new challenge.</p>
+            <p>Outside of my professional life, I have a variety of interests that keep me balanced and inspired. I enjoy running, playing the guitar, working in my garden where I grow vegetables and taking care for my indoor plants. Additionally, I love playing board games, card games and PC games. <!-- These personal interests sometimes intersects with my profession, as you will find out in the projects section. --> Recently, I've also taken up boxing classes, which have been a fantastic new challenge.</p>
             <p>Thank you for visiting my site. Feel free to explore my site, where I share insights on my projects and interests. I'm always eager to connect with like-minded individuals and explore new opportunities. Let's connect and create something amazing together!</p>
         </section>
 
-        <section id="projects">
+        <!--section id="projects">
             <h2>Projects</h2>
             <div class="projects-grid">
                 <div class="project">
@@ -80,7 +80,7 @@
                     <p>Description of the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor tincidunt sapien, at luctus elit.</p>
                 </div>
             </div>
-        </section>
+        </section-->
 
         <section id="contact">
             <h2>Contact</h2>
