--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-container">
                 <a href="#" class="nav-logo" aria-label="Home">GaukeT</a>
                 <div class="nav-menu-icon" id="navMenuIcon" aria-label="Menu">&#9776;</div>
-                <ul class="nav-menu" id="navMenu" role="menu">
+                <ul class="nav-menu" id="navMenu">
                     <li><a href="#home" aria-label="Home">Home</a></li>
                     <li><a href="#about" aria-label="About">About</a></li>
                     <!--li><a href="#projects" aria-label="Projects">Projects</a></li-->
@@ -46,9 +46,9 @@
                 <div class="project">
                     <h3>Project Title 1</h3>
                     <picture>
-                        <source media="(max-width: 768px)" srcset="https://images.unsplash.com/photo-1554549668-2a6c165741ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=80">
-                        <source media="(min-width: 769px)" srcset="https://images.unsplash.com/photo-1554549668-2a6c165741ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80">
-                        <img src="https://images.unsplash.com/photo-1554549668-2a6c165741ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="Project 1" class="placeholder-image">
+                        <source media="(max-width: 768px)" srcset="https://images.unsplash.com/photo-1717496002081-38a90d3cba26?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&&auto=format&fit=crop&w=500&q=80">
+                        <source media="(min-width: 769px)" srcset="https://images.unsplash.com/photo-1717496002081-38a90d3cba26?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1050&q=80">
+                        <img src="https://images.unsplash.com/photo-1717496002081-38a90d3cba26?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1050&q=80" alt="Project 1" class="placeholder-image">
                     </picture>
                     <p>Description of the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor tincidunt sapien, at luctus elit.</p>
                 </div>
